theodoi for benhnhan

--- a/WebTimKiemBacSi/Web/Views/Shared/_Layout.cshtml
+++ b/WebTimKiemBacSi/Web/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
                                         <li><a class="dropdown-item" asp-controller="TaiKhoan" asp-action="QuanLyBenhNhan"><i class="bi bi-people me-2"></i>Quản lý Bệnh nhân</a></li>
                                         <li><hr class="dropdown-divider"></li>
                                     }
-                                    <li><a class="dropdown-item" asp-action="TaiKhoanCaNhan"><i class="bi bi-gear me-2"></i>Cài đặt tài khoản</a></li>
+                                    <li><a class="dropdown-item" asp-controller="TaiKhoan" asp-action="TaiKhoanCaNhan"><i class="bi bi-gear me-2"></i>Cài đặt tài khoản</a></li>
                                     <li><hr class="dropdown-divider"></li>
                                     <li>
                                         <a class="dropdown-item text-danger" asp-controller="TaiKhoan" asp-action="DangXuat">
